# Avonic-Object-Tracking

./: .coverage  .coverage.Ivans-MacBook-Pro.local.14603.830539  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  example.env  output.avi  pyproject.toml  run.sh  settings.bckp
docs/: final-report.tex  glossary.tex  sources.bib
docs/chapters/: appendix-a.tex  appendix-b.tex  appendix-c.tex  appendix-d.tex  appendix-e.tex  conclusion.tex  intro.tex  introduction.tex  preface.tex  problem-analysis.tex  reflection.tex  requirements.tex  solution.tex  summary.tex  workflow-and-teamwork.tex  workflow.tex
notes/: meeting_with_ali_1.MD  meeting_with_ali_2.MD  meeting_with_ali_3.md  meeting_with_ali_4.MD  meeting_with_ali_5.md  meeting_with_ali_7.md  meeting_with_ta_1.MD  meeting_with_ta_2.md  meeting_with_ta_4.MD  meeting_with_ta_6.md  meeting_with_ta_7.md  meeting_with_ta_8.md  meeting_with_ta_9.md  tw_last_meeting.md  week3-ta.md
src/AvonicCameraApi/: Message.py  zoom.py
src/avonic_camera_api/: camera_adapter.py  camera_control_api.py  camera_http_request.py  converter.py  footage.py  test.py  zoom.py
src/avonic_speaker_tracker/: __init__.py  boxtracking.py  calibration.py  calibration_tracker.bckp  calibration_tracker.py  coordinate_translation.py  (+9 more)
src/avonic_speaker_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: CameraMock.py  test_camera_api.py  test_camera_control.py  test_coordinates_translation.py  test_custom_thread.py  test_microphone_api.py  test_microphone_bp.py  test_similarity.py  test_zoom.py
wiki/: README.md
(+190 files in other folders)
