[project]
name = "avonic-speaker-tracker"
version = "0.1.0"
description = "A program for tracking the speaker using an Avonic camera using data from a Sennheiser TeamConnect Ceiling 2 microphone."
readme = "README.md"
authors = [
    {name = "Izzy van der Giessen", email = "i.vandergiessen@student.tudelft.nl"},
    {name = "Petr Khartskhaev", email = "p.khartskhaev@student.tudelft.nl"},
    {name = "Yehor Kozyr", email = "y.kozyr@student.tudelft.nl"},
    {name = "Borislav Semerdzhiev", email = "b.n.semerdzhiev@student.tudelft.nl"},
    {name = "Ivan Smilenov", email = "i.y.smilenov@student.tudelft.nl"}
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "build",
    "pylint",
    "black",
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"